--- a/new/meetings-2019-10-24/index.html
+++ b/new/meetings-2019-10-24/index.html
@@ -117,28 +117,100 @@
   <div class="container">
     <div class="columns">
       <div class="column is-centered-tablet-portrait">
-        <h1 class="title is-2 section-title">图灵奖获得者Robert Kahn博士访问北京大学软件所</h1>
+        <h1 class="title is-2 section-title">CNCC 2019“人机物融合的云计算架构与平台”专题论坛顺利召开</h1>
         <h5 class="subtitle is-5 is-muted"></h5>
         <div class="divider"></div>
         
         <section class="section content has-text-justified">
-          <p>&#8194;&#8194;&#8194;&#8194;2018年10月31日上午，2004年图灵奖获得者Robert E.Kahn博士及其夫人Patrice Lyons一行应邀到访北京大学。</br>
-&#8194;&#8194;&#8194;&#8194;在与北京大学校长郝平教授在临湖轩会见后，Robert E. Kahn博士访问了信息科学技术学院软件所。梅宏院士介绍了北大团队在“云-端融合系统的资源反射机制及高效互操作技术”方面的研究成果，黄罡教授、刘譞哲副教授向Kahn博士介绍了北京大学在网构软件、人机物融合平台、服务计算系统等领域的研究进展。Kahn博士对北大团队的研究工作十分赞赏，认为在世界范围内都处于前沿领先水平，特别是与他提出和倡导的互联网数字对象体系（Digital Object Architecture）高度互补，双方将以此为切入点开展深入合作。</br>
-&#8194;&#8194;&#8194;&#8194;Kahn博士还饶有兴趣地亲身尝试了人机物融合的智能软件实验环境，并与学生进行面对面的亲切交流，现场气氛十分热烈。</p>
-
-<p><center>
+          <p>&#8194;&#8194;&#8194;&#8194;
+2019年10月19日，CNCC2019“人机物融合的云计算架构与平台”专题论坛在苏州金鸡湖国际会议中心A101顺利举行。论坛由北京大学人工智能研究院副院长黄罡教授主持。</p>
+&#8194;&#8194;&#8194;&#8194;
+人机物融合标志着信息技术及其应用开始从“自然世界信息化”向“信息世界自然化”发展，其泛在化、社会化、情境化、智能化等新型应用形态与智能交互模式，蕴含“全栈全网信息资源随需即用”的核心技术特征，提出了“以新型云计算架构和服务模式深度融合人机物三元空间中的云、网、端的软硬件及数据和服务资源”的重大技术挑战，是计算机软件与系统的国际学术研究的主要热点和焦点。论坛立足学科交叉，邀请了相关领域知名学者和专家进行学术报告和研讨，围绕人机物融合的新型云计算架构与平台的发展现状、关键问题、重点技术进行了深入的讨论，吸引了来自高校、研究所和IT企业的百余名科研人员和学生到场参加。</p>
+<center>
     <img style="border-radius: 0.3125em;
     box-shadow: 0 2px 4px 0 rgba(34,36,38,.12),0 2px 10px 0 rgba(34,36,38,.08);" 
-    src="http://cdn.njuics.cn/img/2018yfb1004800.cn/2018-11-1/Kahn.png">
+    src="http://cdn.njuics.cn/file/2018yfb1004800.cn/2019-10-24/1.webp"
+    width="800" height="526">
     <br>
     <div style="color:orange; border-bottom: 1px solid #d9d9d9;
     display: inline-block;
     color: #999;
-    padding: 2px;">Robert E. Kahn博士访问信息科学技术学院软件所</div>
+    padding: 2px;"></div>
 </center>
-Robert E. Kahn博士简介</br>
-&#8194;&#8194;&#8194;&#8194;Robert E. Kahn博士出生于1938年，于1960年从纽约城市大学获得学士学位，1962年和1964年分别从普林斯顿大学获得其硕士和博士学位，先后加入贝尔实验室和BBN（Bolt, Beranek and Newman）工作。在BBN工作期间，Robert E. Kahn博士参加并领导了ARPANET（即互联网的前身）的研发工作。1972年，Robert E. Kahn博士加入了DARPA，成为信息处理技术部（ Information Processing Techniques Office ，IPTO）的部门主管。在DARPA期间，Robert E. Kahn博士领导设计并实现了TCP/IP协议。TCP/IP协议已经成为互联网（Internet）最为核心的通讯基础协议，Robert E. Kahn博士也因此被称作“互联网之父”。同时，Robert E. Kahn博士还是“信息高速公路”这一广为人知的技术概念的创立人。</br>
-&#8194;&#8194;&#8194;&#8194;Robert E. Kahn博士获得过多项世界级的科学奖项，包括马可尼国际奖（1994年）、美国国家技术奖章（1997年）、国际电子电气工程师协会（IEEE）颁发的亚历山大·贝尔奖（1997）等。卡恩博士是美国科学院和美国工程院院士，国际电气和电子工程师协会（IEEE)和美国计算机学会(ACM)会士。2004年，由于在TCP/IP协议上的重大贡献和计算机网络领域的权威性领导地位，Robert E. Kahn博士被授予计算机领域的最高荣誉—美国计算机学会图灵奖（ACM Turing Award），以表彰其在互联网领域先驱性的贡献。</p>
+&#8194;&#8194;&#8194;&#8194;北京大学教授黄罡、清华大学副教授王继良、复旦大学教授彭鑫、中国科学院深圳先进技术研究院研究员王洋和南京大学副教授曹春针对人机物融合的架构、平台、应用进行了主题报告。</p>
+&#8194;&#8194;&#8194;&#8194;黄罡教授的报告主题为《人机物融合的云计算架构与平台》，报告介绍了人机物融合的云计算的管理架构和服务模式，基于计算反射的新型软件定义方法，打通信息壁垒；基于分布式账本的新型资源协同结构，打通信任藩篱；基于时空感知的自然化信息资源模型，打破信物屏障。从而融合人机物三元空间中云、网、端的软硬件及数据和服务资源，实现全栈全网信息资源及其对应的自然资源可编程使用。</p>
+<center>
+    <img style="border-radius: 0.3125em;
+    box-shadow: 0 2px 4px 0 rgba(34,36,38,.12),0 2px 10px 0 rgba(34,36,38,.08);" 
+    src="http://cdn.njuics.cn/file/2018yfb1004800.cn/2019-10-24/2.webp"
+    width="800" height="526">
+    <br>
+    <div style="color:orange; border-bottom: 1px solid #d9d9d9;
+    display: inline-block;
+    color: #999;
+    padding: 2px;"></div>
+</center>
+&#8194;&#8194;&#8194;&#8194;王继良副教授的报告主题为《人机物融合下的物联网工业应用探索》，报告以一个物联网在工业场景应用探索案例为基础，讨论物联网在实际系统场景中遇到的问题，探讨工业物联网应用中人机物融合环境下新的发展机遇和挑战，结合自身在工业物联网中初步经验介绍物联网泛在信号感知方面的研究进展，并介绍相关研究应用前景。</p>
+<center>
+    <img style="border-radius: 0.3125em;
+    box-shadow: 0 2px 4px 0 rgba(34,36,38,.12),0 2px 10px 0 rgba(34,36,38,.08);" 
+    src="http://cdn.njuics.cn/file/2018yfb1004800.cn/2019-10-24/3.webp"
+    width="800" height="526">
+    <br>
+    <div style="color:orange; border-bottom: 1px solid #d9d9d9;
+    display: inline-block;
+    color: #999;
+    padding: 2px;"></div>
+</center>
+&#8194;&#8194;&#8194;&#8194;彭鑫教授的报告主题为《跨越虚实边界的人机物融合应用构造》，报告介绍了平行系统理论的思想，提出构建面向人机物融合应用场景的平行系统，实现现实世界与虚拟世界的双向映射，实现人机物三元要素的统一描述和编程。此外，报告介绍了基于虚实映射的人机物融合应用描述、编程和执行技术。</p>
+<center>
+    <img style="border-radius: 0.3125em;
+    box-shadow: 0 2px 4px 0 rgba(34,36,38,.12),0 2px 10px 0 rgba(34,36,38,.08);" 
+    src="http://cdn.njuics.cn/file/2018yfb1004800.cn/2019-10-24/4.webp"
+    width="800" height="526">
+    <br>
+    <div style="color:orange; border-bottom: 1px solid #d9d9d9;
+    display: inline-block;
+    color: #999;
+    padding: 2px;"></div>
+</center>
+&#8194;&#8194;&#8194;&#8194;王洋研究员的报告主题为《人机物融合环境下应用自适应初探》，报告主要针对人机物三方应用情境的变化，基于对场景数据收集、分析和融合的结果，介绍资源敏感和时空感知的智能数据调度，以及计算如何以边云协同方式实现对融合服务的支撑，使其达到最佳优化目标。最后基于认知计算框架提出一个面向非预设规则的自适应架构。</p>
+<center>
+    <img style="border-radius: 0.3125em;
+    box-shadow: 0 2px 4px 0 rgba(34,36,38,.12),0 2px 10px 0 rgba(34,36,38,.08);" 
+    src="http://cdn.njuics.cn/file/2018yfb1004800.cn/2019-10-24/5.webp"
+    width="800" height="526">
+    <br>
+    <div style="color:orange; border-bottom: 1px solid #d9d9d9;
+    display: inline-block;
+    color: #999;
+    padding: 2px;"></div>
+</center>
+&#8194;&#8194;&#8194;&#8194;曹春副教授的报告主题为《面向人机物融合应用的场景计算机》，报告以“场景计算机”理念作为三元融合软件的抽象，分析其在资源管理方式、使能技术形态和应用开发方法等方面的具体需求与技术框架，探讨人机物融合应用设计开发与运行管理的支撑技术与平台。</p>
+<center>
+    <img style="border-radius: 0.3125em;
+    box-shadow: 0 2px 4px 0 rgba(34,36,38,.12),0 2px 10px 0 rgba(34,36,38,.08);" 
+    src="http://cdn.njuics.cn/file/2018yfb1004800.cn/2019-10-24/6.webp"
+    width="800" height="526">
+    <br>
+    <div style="color:orange; border-bottom: 1px solid #d9d9d9;
+    display: inline-block;
+    color: #999;
+    padding: 2px;"></div>
+</center>
+&#8194;&#8194;&#8194;&#8194;主题报告后的panel环节，讲者与在场听众，针对未来人机物融合之后的世界和日常生活图景、人机物融合对于云计算模式和形态的影响、人机物融合对现有的软硬件和互联网生态带来的变化和催生的生态等问题，进行了热烈的讨论。本次论坛活动取得圆满成功。</p>
+<center>
+    <img style="border-radius: 0.3125em;
+    box-shadow: 0 2px 4px 0 rgba(34,36,38,.12),0 2px 10px 0 rgba(34,36,38,.08);" 
+    src="http://cdn.njuics.cn/file/2018yfb1004800.cn/2019-10-24/7.webp"
+    width="800" height="526">
+    <br>
+    <div style="color:orange; border-bottom: 1px solid #d9d9d9;
+    display: inline-block;
+    color: #999;
+    padding: 2px;"></div>
+</center></p>
+
         </section>
       </div>
     </div>
@@ -146,7 +218,7 @@ Robert E. Kahn博士简介</br>
   <div class="container">
     <div class="columns">
       <div class="column has-text-right is-family-monospace is-centered-tablet-portrait">
-        Last modified:1 November 2018</div>
+        Last modified:24 October 2019</div>
     </div>
   </div></section><footer class="footer footer-dark">
   <div class="container">
