--- a/new/meetings-2019-11-13/index.html
+++ b/new/meetings-2019-11-13/index.html
@@ -117,28 +117,16 @@
   <div class="container">
     <div class="columns">
       <div class="column is-centered-tablet-portrait">
-        <h1 class="title is-2 section-title">图灵奖获得者Robert Kahn博士访问北京大学软件所</h1>
+        <h1 class="title is-2 section-title">复旦大学微服务研究工作获得TSE年度最佳论文奖</h1>
         <h5 class="subtitle is-5 is-muted"></h5>
         <div class="divider"></div>
         
         <section class="section content has-text-justified">
-          <p>&#8194;&#8194;&#8194;&#8194;2018年10月31日上午，2004年图灵奖获得者Robert E.Kahn博士及其夫人Patrice Lyons一行应邀到访北京大学。</br>
-&#8194;&#8194;&#8194;&#8194;在与北京大学校长郝平教授在临湖轩会见后，Robert E. Kahn博士访问了信息科学技术学院软件所。梅宏院士介绍了北大团队在“云-端融合系统的资源反射机制及高效互操作技术”方面的研究成果，黄罡教授、刘譞哲副教授向Kahn博士介绍了北京大学在网构软件、人机物融合平台、服务计算系统等领域的研究进展。Kahn博士对北大团队的研究工作十分赞赏，认为在世界范围内都处于前沿领先水平，特别是与他提出和倡导的互联网数字对象体系（Digital Object Architecture）高度互补，双方将以此为切入点开展深入合作。</br>
-&#8194;&#8194;&#8194;&#8194;Kahn博士还饶有兴趣地亲身尝试了人机物融合的智能软件实验环境，并与学生进行面对面的亲切交流，现场气氛十分热烈。</p>
+          <p>&#8194;&#8194;&#8194;&#8194;
+复旦大学彭鑫老师及微服务小组与北京大学谢涛教授、新加坡管理大学孙军副教授合作完成的关于微服务故障分析和调试的研究论文《Fault Analysis and Debugging of Microservice Systems: Industrial Survey, Benchmark System, and Empirical Study》（作者：Xiang Zhou, Xin Peng, Tao Xie, Jun Sun, Chao Ji, Wenhai Li, and Dan Ding）被评选为软件工程领域的国际旗帜期刊、CCF A类期刊《IEEE Transactions on Software Engineering》2018年唯一的最佳论文。该奖项由评选委员会从该期刊2018年录用的109篇论文中评选而出。此奖项本次是第一次颁发，隶属于IEEE计算机学会2019年发起资助的最佳论文奖计划。这个计划的目的在于表彰和奖励IEEE计算机学会旗下每个期刊杂志在上一年度发表的最佳论文。</br>
+&#8194;&#8194;&#8194;&#8194;
+微服务架构已经成为云计算软件应用的主流选择，但是其复杂、多变的运行环境和服务交互使得微服务故障分析和调试成为企业面临的一个重要挑战。此外，由于缺少公开可用的基准系统，学术界在微服务故障分析和调试方面的研究工作还比较少。针对这些问题，研究组首先针对微服务系统的典型故障及其调试过程开展了面向工业界的调查研究，总结了一系列有代表性的微服务系统故障以及常用的故障分析和调试方法，并在自主研发的开源微服务系统<a href="https://github.com/FudanSELab/train-ticket/" target="_blank">TrainTicket</a>上进行了迁移性的故障复现。在此基础上，研究组针对企业广泛使用的微服务故障分析和调试方法开展了经验研究，并提出了一种基于轨迹日志追踪和可视化分析的改进方法。该研究系统总结了工业界微服务系统的典型故障及故障调试的实践方法，同时为后续的微服务技术研究提供了一个开源基准系统TrainTicket以及基于TrainTicket复现的22个典型故障。此外，该研究还针对智能化的微服务轨迹日志分析和可视化提出了相应的技术思路。</p>
 
-<p><center>
-    <img style="border-radius: 0.3125em;
-    box-shadow: 0 2px 4px 0 rgba(34,36,38,.12),0 2px 10px 0 rgba(34,36,38,.08);" 
-    src="http://cdn.njuics.cn/img/2018yfb1004800.cn/2018-11-1/Kahn.png">
-    <br>
-    <div style="color:orange; border-bottom: 1px solid #d9d9d9;
-    display: inline-block;
-    color: #999;
-    padding: 2px;">Robert E. Kahn博士访问信息科学技术学院软件所</div>
-</center>
-Robert E. Kahn博士简介</br>
-&#8194;&#8194;&#8194;&#8194;Robert E. Kahn博士出生于1938年，于1960年从纽约城市大学获得学士学位，1962年和1964年分别从普林斯顿大学获得其硕士和博士学位，先后加入贝尔实验室和BBN（Bolt, Beranek and Newman）工作。在BBN工作期间，Robert E. Kahn博士参加并领导了ARPANET（即互联网的前身）的研发工作。1972年，Robert E. Kahn博士加入了DARPA，成为信息处理技术部（ Information Processing Techniques Office ，IPTO）的部门主管。在DARPA期间，Robert E. Kahn博士领导设计并实现了TCP/IP协议。TCP/IP协议已经成为互联网（Internet）最为核心的通讯基础协议，Robert E. Kahn博士也因此被称作“互联网之父”。同时，Robert E. Kahn博士还是“信息高速公路”这一广为人知的技术概念的创立人。</br>
-&#8194;&#8194;&#8194;&#8194;Robert E. Kahn博士获得过多项世界级的科学奖项，包括马可尼国际奖（1994年）、美国国家技术奖章（1997年）、国际电子电气工程师协会（IEEE）颁发的亚历山大·贝尔奖（1997）等。卡恩博士是美国科学院和美国工程院院士，国际电气和电子工程师协会（IEEE)和美国计算机学会(ACM)会士。2004年，由于在TCP/IP协议上的重大贡献和计算机网络领域的权威性领导地位，Robert E. Kahn博士被授予计算机领域的最高荣誉—美国计算机学会图灵奖（ACM Turing Award），以表彰其在互联网领域先驱性的贡献。</p>
         </section>
       </div>
     </div>
@@ -146,7 +134,7 @@ Robert E. Kahn博士简介</br>
   <div class="container">
     <div class="columns">
       <div class="column has-text-right is-family-monospace is-centered-tablet-portrait">
-        Last modified:1 November 2018</div>
+        Last modified:13 November 2019</div>
     </div>
   </div></section><footer class="footer footer-dark">
   <div class="container">
