--- a/new/meetings-2019-10-20/index.html
+++ b/new/meetings-2019-10-20/index.html
@@ -117,19 +117,28 @@
   <div class="container">
     <div class="columns">
       <div class="column is-centered-tablet-portrait">
-        <h1 class="title is-2 section-title">复旦大学微服务研究工作获得TSE年度最佳论文奖</h1>
+        <h1 class="title is-2 section-title">复旦大学实验室师生参加2019中国计算机大会（CNCC）</h1>
         <h5 class="subtitle is-5 is-muted"></h5>
         <div class="divider"></div>
         
         <section class="section content has-text-justified">
           <p>&#8194;&#8194;&#8194;&#8194;
-复旦大学彭鑫老师及微服务小组与北京大学谢涛教授、新加坡管理大学孙军副教授合作完成的关于微服务故障分析和调试的研究论文《Fault Analysis and Debugging of Microservice Systems: Industrial Survey, Benchmark System, and Empirical Study》（作者：Xiang Zhou, Xin Peng, Tao Xie, Jun Sun, Chao Ji, Wenhai Li, and Dan Ding）被评选为软件工程领域的国际旗帜期刊、CCF A类期刊《IEEE Transactions on Software Engineering》2018年唯一的最佳论文。该奖项由评选委员会从该期刊2018年录用的109篇论文中评选而出。此奖项本次是第一次颁发，隶属于IEEE计算机学会2019年发起资助的最佳论文奖计划。这个计划的目的在于表彰和奖励IEEE计算机学会旗下每个期刊杂志在上一年度发表的最佳论文。</br>
-&#8194;&#8194;&#8194;&#8194;
-微服务架构已经成为云计算软件应用的主流选择，但是其复杂、多变的运行环境和服务交互使得微服务故障分析和调试成为企业面临的一个重要挑战。此外，由于缺少公开可用的基准系统，学术界在微服务故障分析和调试方面的研究工作还比较少。针对这些问题，研究组首先针对微服务系统的典型故障及其调试过程开展了面向工业界的调查研究，总结了一系列有代表性的微服务系统故障以及常用的故障分析和调试方法，并在自主研发的开源微服务系统<a href="https://github.com/FudanSELab/train-ticket/" target="_blank">TrainTicket</a>上进行了迁移性的故障复现。在此基础上，研究组针对企业广泛使用的微服务故障分析和调试方法开展了经验研究，并提出了一种基于轨迹日志追踪和可视化分析的改进方法。该研究系统总结了工业界微服务系统的典型故障及故障调试的实践方法，同时为后续的微服务技术研究提供了一个开源基准系统TrainTicket以及基于TrainTicket复现的22个典型故障。此外，该研究还针对智能化的微服务轨迹日志分析和可视化提出了相应的技术思路。
+2019中国计算机大会（CNCC）于10月17日-10月19日在苏州金鸡湖国际会议中心召开。实验室彭鑫、吴毅坚、沈立炜、陈碧欢老师携同14位研究生参加会议。彭鑫老师在19日的“人机物融合的云计算架构与平台论坛”上为与会者带来了“跨越虚实边界的人机物融合应用构造”的报告。在三天的会议过程中，老师与同学认真聆听大会与分论坛的专家与学者报告，了解业界最新进展，并与参会同行进行积极交流。</br>
 <center>
     <img style="border-radius: 0.3125em;
     box-shadow: 0 2px 4px 0 rgba(34,36,38,.12),0 2px 10px 0 rgba(34,36,38,.08);" 
-    src="http://cdn.njuics.cn/file/2018yfb1004800.cn/2019-11-13.png"
+    src="http://cdn.njuics.cn/file/2018yfb1004800.cn/2019-10-20/1.png"
+    width="800" height="526">
+    <br>
+    <div style="color:orange; border-bottom: 1px solid #d9d9d9;
+    display: inline-block;
+    color: #999;
+    padding: 2px;"></div>
+</center>
+<center>
+    <img style="border-radius: 0.3125em;
+    box-shadow: 0 2px 4px 0 rgba(34,36,38,.12),0 2px 10px 0 rgba(34,36,38,.08);" 
+    src="http://cdn.njuics.cn/file/2018yfb1004800.cn/2019-10-20/2.png"
     width="800" height="526">
     <br>
     <div style="color:orange; border-bottom: 1px solid #d9d9d9;
@@ -145,7 +154,7 @@
   <div class="container">
     <div class="columns">
       <div class="column has-text-right is-family-monospace is-centered-tablet-portrait">
-        Last modified:13 November 2019</div>
+        Last modified:20 October 2019</div>
     </div>
   </div></section><footer class="footer footer-dark">
   <div class="container">
