--- a/new/meetings-2020-4-11/index.html
+++ b/new/meetings-2020-4-11/index.html
@@ -123,9 +123,7 @@
         
         <section class="section content has-text-justified">
           <p>&#8194;&#8194;&#8194;&#8194;
-2020年4月11-12日，国家重点研发计划“人机物融合的云计算架构与平台”通过线上会议的方式成功举办了阶段性研讨会，项目17家参与单位近百名师生通过腾讯会议参加了此次研讨会。
-&#8194;&#8194;&#8194;&#8194;
-本次会议进一步明确了人机物融合的云计算平台的内涵、项目交付物和应用展示形态。项目各参与单位介绍了本单位研究内容，并讨论形成了人机物融合的云计算平台开发与集成方案。此外，面向项目结题，制定了未来一年的详细工作安排。最后，项目负责人黄罡教授总结了人机物融合环境下，资源、系统和应用的新特性，规划和展望了行业前景，提出了项目组更为长远的工作目标。</p>
+2020年4月11-12日，国家重点研发计划“人机物融合的云计算架构与平台”通过线上会议的方式成功举办了阶段性研讨会，项目17家参与单位近百名师生通过腾讯会议参加了此次研讨会。本次会议进一步明确了人机物融合的云计算平台的内涵、项目交付物和应用展示形态。项目各参与单位介绍了本单位研究内容，并讨论形成了人机物融合的云计算平台开发与集成方案。此外，面向项目结题，制定了未来一年的详细工作安排。最后，项目负责人黄罡教授总结了人机物融合环境下，资源、系统和应用的新特性，规划和展望了行业前景，提出了项目组更为长远的工作目标。</p>
 
 <p><center>
     <img style="border-radius: 0.3125em;
@@ -135,12 +133,8 @@
     <div style="color:orange; border-bottom: 1px solid #d9d9d9;
     display: inline-block;
     color: #999;
-    padding: 2px;">佐治亚理工学院的Ling Liu教授做特邀报告</div>
-</center></p>
-
-<p>&#8194;&#8194;&#8194;&#8194;
-特邀报告环节共邀请了三位国内外学者围绕论坛主题做学术报告。首先，佐治亚理工学院Ling Liu教授做了题目为《Robustness of Deep Learning Systems Against Deception》的报告。Liu教授提出，深度学习模型往往容易受到对抗输入的欺骗，从而做出错误判断。针对这一现状，Liu教授使用跨层战略团队防御框架和技术来分析确保稳健的深度学习的可行性。
-<!-- ![avatar](http://cdn.njuics.cn/img/2018yfb1004800.cn/2019-s2/mei.jpeg) -->
+    padding: 2px;">
+</center>
 <center>
     <img style="border-radius: 0.3125em;
     box-shadow: 0 2px 4px 0 rgba(34,36,38,.12),0 2px 10px 0 rgba(34,36,38,.08);" 
@@ -149,7 +143,7 @@
     <div style="color:orange; border-bottom: 1px solid #d9d9d9;
     display: inline-block;
     color: #999;
-    padding: 2px;">密歇根大学的Qiaozhu Mei教授做特邀报告</div>
+    padding: 2px;">
 </center></p>
 
         </section>
